# opal-lang

./: .gitignore  LICENSE  README.md  opal.py  opalc.py  pyproject.toml  requirements.txt  run.bat
components/: Compiler.py  Tokens.py  utils.py
examples/: 2048.opal  fibonacci.opal  fireworks.opal  rain.opal
libs/: Array.py  Graphics.py  Queue.py  Stack.py  Vector.py  _helpers.py  _internals.py  char.py  fastSort.opal  fastSort.py  helpers.opal  merge.opal  merge.py  sort.opal  sort.py  stableSort.opal  stableSort.py  std.opal  std.py
libs/graphics/: Graphics.py
runner/: build.py  run.py
src/opal/: __init__.py  __main__.py
src/opal/components/: Compiler.py  utils.py
src/opal/examples/: fibonacci.opal
src/opal/libs/: Array.py  Queue.py  Stack.py  _internals.py  merge.opal
src/opal/libs/graphics/: Graphics.py
src/opal/runner/: build.py
