[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.opal", "*.ico", "*.png"]

[project]
name = "opal-lang"
version = "2024.5.10"
description = "A programming language based on Python and Cython"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame",
    "numpy",
    "typeguard",
    "Cython",
    "ianthe>=2023.12.17"
]

[project.urls]
"Homepage" = "https://github.com/thatsOven/opal-lang"